[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Font/CrimsonText-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1098.0
margin_bottom = 586.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Label" parent="ScrollContainer/Rows"]
margin_right = 1098.0
margin_bottom = 14.0

[node name="Title" type="Label" parent="ScrollContainer/Rows"]
margin_top = 18.0
margin_right = 1098.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS_TITLE"
align = 1

[node name="Padding2" type="Label" parent="ScrollContainer/Rows"]
margin_top = 91.0
margin_right = 1098.0
margin_bottom = 105.0

[node name="Audio" type="Label" parent="ScrollContainer/Rows"]
margin_top = 109.0
margin_right = 1098.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS_AUDIO"
align = 1

[node name="AudioAllCols" type="HBoxContainer" parent="ScrollContainer/Rows"]
margin_top = 156.0
margin_right = 1098.0
margin_bottom = 188.0

[node name="AllLabel" type="Label" parent="ScrollContainer/Rows/AudioAllCols"]
margin_right = 363.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "SETTINGS_AUDIO_ALL"
align = 2

[node name="AllSlider" type="HSlider" parent="ScrollContainer/Rows/AudioAllCols"]
margin_left = 367.0
margin_right = 730.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="AllPercent" type="Label" parent="ScrollContainer/Rows/AudioAllCols"]
margin_left = 734.0
margin_right = 1098.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="AudioBGMCols" type="HBoxContainer" parent="ScrollContainer/Rows"]
margin_top = 192.0
margin_right = 1098.0
margin_bottom = 224.0

[node name="BGMLabel" type="Label" parent="ScrollContainer/Rows/AudioBGMCols"]
margin_right = 363.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "SETTINGS_AUDIO_BGM"
align = 2

[node name="BGMSlider" type="HSlider" parent="ScrollContainer/Rows/AudioBGMCols"]
margin_left = 367.0
margin_right = 730.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="BGMPercent" type="Label" parent="ScrollContainer/Rows/AudioBGMCols"]
margin_left = 734.0
margin_right = 1098.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="AudioSFXCols" type="HBoxContainer" parent="ScrollContainer/Rows"]
margin_top = 228.0
margin_right = 1098.0
margin_bottom = 260.0

[node name="SfxLabel" type="Label" parent="ScrollContainer/Rows/AudioSFXCols"]
margin_right = 363.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "SETTINGS_AUDIO_SFX"
align = 2

[node name="SfxSlider" type="HSlider" parent="ScrollContainer/Rows/AudioSFXCols"]
margin_left = 367.0
margin_right = 730.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="SfxPercent" type="Label" parent="ScrollContainer/Rows/AudioSFXCols"]
margin_left = 734.0
margin_right = 1098.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="Padding3" type="Label" parent="ScrollContainer/Rows"]
margin_top = 264.0
margin_right = 1098.0
margin_bottom = 278.0

[node name="Mouse" type="Label" parent="ScrollContainer/Rows"]
margin_top = 282.0
margin_right = 1098.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS_MOUSE"
align = 1

[node name="MouseCols" type="HBoxContainer" parent="ScrollContainer/Rows"]
margin_top = 329.0
margin_right = 1098.0
margin_bottom = 361.0

[node name="SensisitivityLabel" type="Label" parent="ScrollContainer/Rows/MouseCols"]
margin_right = 363.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "SETTINGS_MOUSE_SENSITIVITY"
align = 2

[node name="SenseSlider" type="HSlider" parent="ScrollContainer/Rows/MouseCols"]
margin_left = 367.0
margin_right = 730.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 20.0
step = 1.0
value = 1.0

[node name="SenseValue" type="Label" parent="ScrollContainer/Rows/MouseCols"]
margin_left = 734.0
margin_right = 1098.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="Padding4" type="Label" parent="ScrollContainer/Rows"]
margin_top = 365.0
margin_right = 1098.0
margin_bottom = 379.0

[node name="Language" type="Label" parent="ScrollContainer/Rows"]
margin_top = 383.0
margin_right = 1098.0
margin_bottom = 426.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS_LANGUAGE"
align = 1

[node name="LanguageCols" type="HBoxContainer" parent="ScrollContainer/Rows"]
margin_top = 430.0
margin_right = 1098.0
margin_bottom = 468.0

[node name="EnglishButton" type="Button" parent="ScrollContainer/Rows/LanguageCols"]
margin_right = 366.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "SETTINGS_LANGUAGE_ENGLISH"
flat = true

[node name="SpanishButton" type="Button" parent="ScrollContainer/Rows/LanguageCols"]
margin_left = 370.0
margin_right = 734.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "SETTINGS_LANGUAGE_SPANISH"
flat = true

[node name="FrenchButton" type="Button" parent="ScrollContainer/Rows/LanguageCols"]
margin_left = 738.0
margin_right = 1098.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "SETTINGS_LANGUAGE_FRENCH"
flat = true

[node name="ControlsTODO" type="Label" parent="ScrollContainer/Rows"]
margin_top = 472.0
margin_right = 1098.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS_CONTROL"
align = 1

[node name="Padding5" type="Label" parent="ScrollContainer/Rows"]
margin_top = 519.0
margin_right = 1098.0
margin_bottom = 533.0

[node name="Return" type="Button" parent="ScrollContainer/Rows"]
margin_top = 537.0
margin_right = 1098.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 5 )
text = "SETTINGS_RETURN"
flat = true
[connection signal="value_changed" from="ScrollContainer/Rows/AudioAllCols/AllSlider" to="." method="_on_AllSlider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/Rows/AudioBGMCols/BGMSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/Rows/AudioSFXCols/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/Rows/MouseCols/SenseSlider" to="." method="_on_SenseSlider_value_changed"]
[connection signal="pressed" from="ScrollContainer/Rows/LanguageCols/EnglishButton" to="." method="_on_EnglishButton_pressed"]
[connection signal="pressed" from="ScrollContainer/Rows/LanguageCols/SpanishButton" to="." method="_on_SpanishButton_pressed"]
[connection signal="pressed" from="ScrollContainer/Rows/LanguageCols/FrenchButton" to="." method="_on_FrenchButton_pressed"]
[connection signal="pressed" from="ScrollContainer/Rows/Return" to="." method="_on_Return_pressed"]
